Fix the double border in windows with a search bar.
Includes applications like GNOME Software and GNOME Documents. The
search bar is a composite widget with a revealer inside it, and when the
content of the revealer is hidden, the border lingers. Changed the CSS
to add style to the content of the revealer instead of the search bar
widget itself.

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -1404,7 +1404,7 @@ toolbar {
   border-radius: 0  0 5px 5px;
 }
 
-searchbar,
+searchbar > revealer > *,
 .location-bar {
   @extend %toolbar;
 
@@ -1412,6 +1412,12 @@ searchbar,
 
   border-width: 0 0 1px;
   padding: 3px;
+}
+
+// workaround: undo the GTK+ margin and use CSS padding instead
+searchbar > revealer > * {
+  margin: -6px;
+  padding: 6px;
 }
 
 %darkbar {
